--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 #board {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 1px;
+  /* display: grid; */
+  /* grid-template-columns: repeat(3, 1fr); */
+  /* gap: 1px; */
+  position: relative;
   width: 400px;
   height: 400px;
   border: 1px solid gray;
@@ -9,8 +10,11 @@
 }
 
 .box {
-  position: relative;
+  display: inline-block; /* */
+  /* position: relative; */
+  position: absolute;
   width: 130px;
   height: 130px;
   border: 1px solid gray;
+  margin: 0;
 }
