--- a/style.css
+++ b/style.css
@@ -6,10 +6,70 @@
   height: 400px;
   border: 1px solid gray;
   margin: 0 auto;
+
+  background-image: 
+  repeating-linear-gradient(90deg, blue 0 1px, transparent 0px 133px),
+  repeating-linear-gradient(0deg, blue 0 1px, transparent 0px 133px);
+
+  /* gap: 20px; */
 }
 
 .box {
   width: 130px;
   height: 130px;
   border: 1px solid gray;
+  font-size: 40px;
+  border-radius: 10px;
+}
+
+.box3{
+  background-color: #d0c953;
+}
+
+.box6{
+  background-color: #faec05;
+}
+
+.box12{
+  background-color: #7adf6a;
+}
+
+.box24{
+  background-color: #05f80b;
+}
+
+.box48{
+  background-color: #05f8e4;
+}
+
+.box96{
+  background-color: #0d06a0;
+}
+
+.box192{
+  background-color: #bd4fbe;
+}
+
+.box384{
+  background-color: #510652;
+}
+
+.box768{
+  background-color: #fc7305;
+}
+
+.box1536{
+  background-color: #e02823;
+}
+
+.box3072{
+  background-color: #1b0302;
+  color: whitesmoke;
+}
+
+.boxNumber {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
 }
