--- a/style.css
+++ b/style.css
@@ -6,11 +6,15 @@
   width: 400px;
   height: 400px;
   border: 1px solid gray;
+  border-radius: 10px;
   margin: 0 auto;
 
-  background-image: 
-  repeating-linear-gradient(90deg, blue 0 1px, transparent 0px 133.333px),
-  repeating-linear-gradient(0deg, blue 0 1px, transparent 0px 133.333px);
+  background-image: repeating-linear-gradient(
+      90deg,
+      gray 0 1px,
+      transparent 0px 133.333px
+    ),
+    repeating-linear-gradient(0deg, gray 0 1px, transparent 0px 133.333px);
 
   /* gap: 20px; */
 }
@@ -19,56 +23,71 @@
   display: inline-block; /* */
   /* position: relative; */
   position: absolute;
-  width: 130px;
+  width: 134px;
   height: 130px;
+  /* width: 130px;
+  height: 130px; */
   border: 1px solid gray;
   margin: 0;
   font-size: 40px;
   border-radius: 10px;
 }
 
-.box-3{
-  background-color: #d0c953;
+.box-3 {
+  /* background-color: #d0c953; */
+  background-color: #eafdf2;
 }
 
-.box-6{
-  background-color: #faec05;
+.box-6 {
+  /* background-color: #faec05; */
+  background-color: #c1f8d9;
 }
 
-.box-12{
-  background-color: #7adf6a;
+.box-12 {
+  /* background-color: #7adf6a; */
+  background-color: #97f3bf;
 }
 
-.box-24{
-  background-color: #05f80b;
+.box-24 {
+  background-color: #6eeea5;
 }
 
-.box-48{
-  background-color: #05f8e4;
+.box-48 {
+  background-color: #45e98c;
 }
 
-.box-96{
-  background-color: #0d06a0;
+.box-96 {
+  /* background-color: #0d06a0; */
+  background-color: #1be472;
 }
 
-.box-192{
-  background-color: #bd4fbe;
+.box-192 {
+  /* background-color: #bd4fbe; */
+  background-color: #16ba5d;
+  color: whitesmoke;
 }
 
-.box-384{
-  background-color: #510652;
+.box-384 {
+  /* background-color: #510652; */
+  background-color: #119148;
+  color: whitesmoke;
 }
 
-.box-768{
-  background-color: #fc7305;
+.box-768 {
+  /* background-color: #fc7305; */
+  background-color: #13a050;
+  color: whitesmoke;
 }
 
-.box-1536{
-  background-color: #e02823;
+.box-1536 {
+  /* background-color: #e02823; */
+  background-color: #0c6834;
+  color: whitesmoke;
 }
 
-.box-3072{
-  background-color: #1b0302;
+.box-3072 {
+  /* background-color: #1b0302; */
+  background-color: #073e1f;
   color: whitesmoke;
 }
 
@@ -77,4 +96,96 @@
   justify-content: center;
   align-items: center;
   height: 100%;
+}
+
+body {
+  font-family: sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+header {
+  background: #0a542a;
+  margin-bottom: 30px;
+}
+
+.navbar {
+  max-width: 65%;
+  margin: 0 auto;
+  padding: 10px 10px;
+  position: relative;
+  color: whitesmoke;
+}
+
+.logo {
+  text-decoration: none;
+  font-weight: 800;
+  font-size: 30px;
+  line-height: 40px;
+  color: whitesmoke;
+}
+
+nav > ul li ul {
+  display: none;
+  position: absolute;
+  left: 0;
+  top: 100%;
+  width: 100%;
+  z-index: 2000;
+}
+
+@media screen and (max-width: 768px) {
+  nav ul {
+    display: none;
+  }
+  label {
+    display: block;
+    background: #222;
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+    position: absolute;
+    right: 20px;
+    top: 0px;
+  }
+  label:after {
+    content: "";
+  }
+}
+
+.nav-links {
+  margin: 0;
+  padding: 0;
+  float: right;
+}
+
+.nav-links > .nav-link {
+  float: left;
+  list-style: none;
+  cursor: pointer;
+  color: whitesmoke;
+  text-align: center;
+  line-height: 40px;
+  margin-left: 70px;
+}
+
+.nav-link > a {
+  text-decoration: none;
+  cursor: pointer;
+  display: block;
+  outline: none;
+  width: 100%;
+  text-decoration: none;
+  color: whitesmoke;
+}
+
+.nav-link:hover {
+}
+
+nav {
+  padding: 10px 0;
 }
