--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+html{
+  overscroll-behavior: contain;
+}
+
 #board {
   /* display: grid; */
   /* grid-template-columns: repeat(3, 1fr); */
@@ -371,6 +375,7 @@ body {
   font-family: "Chivo Mono", monospace;
   margin: 0;
   padding: 0;
+
 }
 
 nav {
