--- a/style.css
+++ b/style.css
@@ -3,24 +3,12 @@ html{
 }
 
 #board {
-  /* display: grid; */
-  /* grid-template-columns: repeat(3, 1fr); */
-  /* gap: 1px; */
   position: relative;
   width: 400px;
   height: 400px;
   border: 1px solid gray;
   border-radius: 10px;
   margin: 0 auto;
-
-  /* background-image: repeating-linear-gradient(
-      90deg,
-      gray 0 1px,
-      transparent 0px 133.333px
-    ),
-    repeating-linear-gradient(0deg, gray 0 1px, transparent 0px 133.333px); */
-
-  /* gap: 20px; */
 }
 .board3{
   background-image: repeating-linear-gradient(
@@ -67,15 +55,8 @@ html{
 }
 
 .box {
-  display: inline-block; /* */
-  /* position: relative; */
+  display: inline-block;
   position: absolute;
-
-  /* width: 134px;
-  height: 130px; */
-
-  /* width: 130px;
-  height: 130px; */
   border: 1px solid gray;
   margin: 0;
   font-size: 40px;
@@ -263,18 +244,6 @@ nav > ul li ul {
 
 }
 
-/* @media on screen and (orientation: landscape) {
-  html {
-    transform: rotate(-90deg);
-    transform-origin: left top;
-    width: 100vh;
-    overflow-x: hidden;
-    position: absolute;
-    top: 100%;
-    left: 0;
-  }
-} */
-
 .nav-links {
   margin: 0;
   padding: 0;
@@ -304,9 +273,6 @@ nav > ul li ul {
   color: whitesmoke;
 }
 
-.nav-link:hover {
-}
-
 nav {
   padding: 10px 0;
 }
@@ -327,7 +293,6 @@ nav {
 
 #start-gyro{
   display: none;
-  /* visibility: hidden; */
   margin: 0 auto;
   position: relative;
   color: white;
